# ee

./: README.md  rostostm32_receive  stm32toros_send
piper_ros/: README(EN).md  TROUBLESHOOTING.md  USAGE.md
piper_ros/src/arm_control_node/: CMakeLists.txt  README_ENHANCED_CONTROL.md  README_OPTIMIZATION.md  README_TEACH_ANGLES.md  arm_control_node.cpp  arm_control_node.h  package.xml
piper_ros/src/arm_control_node/config/: scissor_config.yaml  teach_angles.yaml  tree_positions.yaml
piper_ros/src/arm_control_node/launch/: arm_control_with_config.launch  camera_arm_control.launch
piper_ros/src/arm_control_node/msg/: CameraTargets.msg
piper_ros/src/armmu/armmu/: CMakeLists.txt  package.xml
piper_ros/src/armmu/armmu/launch/: display.launch  gazebo.launch
piper_ros/src/armmu/armmu/meshes/: Link1.STL  Link2.STL  Link3.STL  Link4.STL  Link5.STL  Link6.STL  base_link.STL
piper_ros/src/armmu/armmu/urdf/: armmu.csv  (+1 more)
piper_ros/src/eyes2hand/: CMakeLists.txt  README_fruit_detection.md  package.xml
piper_ros/src/eyes2hand/config/: trees_position.yaml
piper_ros/src/eyes2hand/launch/: handeye_transform_node.launch
piper_ros/src/eyes2hand/msg/: HandEyeIK.msg
piper_ros/src/eyes2hand/scripts/: fruit_position_node (1).py  fruit_position_node.py  fruit_position_node_test.py  handeye_transform_node.py
piper_ros/src/piper_description/: CMakeLists.txt
piper_ros/src/piper_description/urdf/: piper_description.csv  piper_description.urdf  piper_description.xacro  piper_description_gazebo.xacro  piper_description_old.urdf  piper_no_gripper_description.csv  piper_no_gripper_description.urdf  piper_no_gripper_description.xacro  piper_no_gripper_description_gazebo.xacro  piper_no_gripper_description_old.urdf
piper_ros/src/piper_moveit/moveit_ctrl/: CMakeLists.txt
piper_ros/src/serial_bridge/: CMakeLists.txt  README_CAMERA_ARM_CONTROL.md  README_SERIAL_FIX.md  package.xml
piper_ros/src/serial_bridge/launch/: camera_arm_control.launch  camera_arm_control_improved.launch  send_velocity_test.launch  serial_bridge.launch
piper_ros/src/serial_bridge/scripts/: camera_simulator.py  obstacle_simulator.py  serial_bridge.py  simple_test.py  test_serial_communication.py
piper_ros/src/serial_bridge/src/: Queue_T.cpp  main.cpp  odom_trajectory_control.cpp  pid_controller.cpp  test_send_velocity.cpp  uart.cpp  uart_Thread.cpp
(+9 files in other folders)
