<?xml version="1.0"?>
<package format="2">
  <name>arm_control_node</name>
  <version>0.0.0</version>
  <description>The arm control node package for camera-based fruit picking</description>

  <maintainer email="developer@todo.todo">Developer</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>eyes2hand</depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>moveit_ctrl</build_depend>
  <build_depend>piper_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>moveit_ctrl</exec_depend>
  <exec_depend>piper_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
